--- a/build.gradle
+++ b/build.gradle
@@ -6,30 +6,31 @@ buildscript {
         minSdkVersion = 21
         targetSdkVersion = 30
         compileSdkVersion = 30
+        buildToolsVersion = "30.0.2"
 
         // App dependencies
-        appCompatVersion = "1.2.0"
-        constraintLayoutVersion = "2.0.4"
-        coroutinesVersion = "1.3.9"
-        dataStoreVersion = "1.0.0-alpha02"
-        espressoVersion = "3.3.0"
-        fragmentVersion = "1.3.0-beta01"
-        gradleVersion = "4.1.0"
-        hiltAndroidXVersion = "1.0.0-alpha02"
-        hiltVersion = "2.28.3-alpha"
-        junitVersion = "4.13.1"
-        kotlinVersion = "1.4.10"
-        ktxVersion = "1.3.2"
-        lifecycleVersion = "2.2.0"
-        materialVersion = "1.3.0-alpha03"
-        navigationVersion = "2.3.1"
-        roomVersion = "2.2.5"
-        testExtJunitVersion = "1.1.2"
+        appCompatVersion = "1.3.1"
+        constraintLayoutVersion = "2.1.0"
+        coroutinesVersion = "1.5.1"
+        dataStoreVersion = "1.0.0"
+        espressoVersion = "3.4.0"
+        fragmentVersion = "1.4.0-alpha06"
+        gradleVersion = "7.0.0"
+        hiltAndroidXVersion = "1.0.0"
+        hiltVersion = "2.38.1"
+        junitVersion = "4.13.2"
+        kotlinVersion = "1.5.21"
+        ktxVersion = "1.6.0"
+        lifecycleVersion = "2.4.0-alpha03"
+        materialVersion = "1.5.0-alpha01"
+        navigationVersion = "2.3.5"
+        roomVersion = "2.3.0"
+        testExtJunitVersion = "1.1.3"
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -43,7 +44,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
